# DevOS

./: .clang-format  .gitignore  README.md
api/: main.py  requirements.txt
core/: CMakeLists.txt
core/include/: dungeon.h  generator.h  getch.h  hello.h  player.h  tile.h
core/src/: dungeon.cpp  generator.cpp  hello.cpp  main.cpp  player.cpp
frontend/: electron-main.js  global.d.ts  index.html  package.json  preload.js
frontend/src/: App.tsx  main.tsx
frontend/src/styles/: main.css
